quick fix to align buttons icons

--- a/src/shared/components/Button.scss
+++ b/src/shared/components/Button.scss
@@ -37,6 +37,8 @@
 }
 
 button {
+    display: flex;
+    align-items: center;
     /* Default/Layout values */
     font-family: inherit;
     padding: 8px 16px;
